--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="search.css">
         <link rel="stylesheet" type="text/css" href="mobile.css">
+        <link rel="stylesheet" type="text/css" href="smallScreen.css">
     </head>
     <body>
         <header class="wrapper">
             <div><h1 class="h1New">Погода здесь</h1></div>
             <div><button class="butDesign">Обновить геолокацию</button></div>
+            <div><button class="butDesignSmall"><img src="https://www.flaticon.com/svg/vstatic/svg/4245/4245329.svg?token=exp=1613715624~hmac=be74b8729b7931ae497d740244b0e671" alt=""></button></div>
         </header>
         <main>
             <div class="grid">
