--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div>
                     <h2>Saint Petersburg</h2>
 
-                    <img class="imgClassBig" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                    <img class="imgClassBig" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                     <p class="tempP">8°C</p>
                 </div>
 
@@ -48,7 +48,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
@@ -63,7 +63,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
@@ -78,7 +78,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
@@ -93,7 +93,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
@@ -108,7 +108,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
@@ -123,7 +123,7 @@
                         <div class="hat">
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
-                            <img class="imgClassSmall" src="https://www.flaticon.com/svg/vstatic/svg/97/97207.svg?token=exp=1613676729~hmac=5eddd7bbfe940386a73c20bb7c23bbc2"></img>
+                            <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
