Change for new log

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="rghtCentringToRight">
                         <p class="PforCity"><textarea name="comment" placeholder="Добавить новый город" 
                             required form="text"></textarea></p>
-                        <button><img class="imgPlus" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>                
+                        <button><img class="imgPlus" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>                
                     </div>
             </div>
 
@@ -49,7 +49,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -64,7 +64,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -79,7 +79,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -94,7 +94,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -109,7 +109,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -124,7 +124,7 @@
                             <h2 class="CityStyle">Moscow</h2>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://www.flaticon.com/svg/vstatic/svg/1828/1828919.svg?token=exp=1613676787~hmac=d3630675e83add02d84e840cf51eb040"></button>
+                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
