--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </div>
 
                 <div class="rghtCentringToRight">
-                        <p class="PforCity"><textarea name="comment" placeholder="Добавить новый город" 
-                            required form="text"></textarea></p>
+                        <p class="PforCity"><!--<textarea name="comment" placeholder="Добавить новый город" 
+                            required form="text">--><input type="text" placeholder="Добавить новый город" size="40"></textarea></p>
                         <button><img class="imgPlus" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>                
                     </div>
             </div>
