--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                 </div>
 
                 <div class="rghtCentringToRight">
-                        <p class="PforCity"><!--<textarea name="comment" placeholder="Добавить новый город" 
-                            required form="text">--><input type="text" placeholder="Добавить новый город" size="40"></textarea></p>
-                        <button><img class="imgPlus" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>                
+                        <input type="text" placeholder="Добавить новый город" size="40">
+                        <button>+</button>                
                     </div>
             </div>
 
@@ -49,7 +48,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -64,7 +63,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -79,7 +78,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -94,7 +93,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -109,7 +108,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
@@ -124,7 +123,7 @@
                             <h3 class="CityStyle">Moscow</h3>
                             <p class="tempPsmall">8°C</p>
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                            <button><img class="imgExit" src="https://img.icons8.com/pastel-glyph/128/000000/plus--v1.png"></button>
+                            <button class="supreme">x</button>
                         </div>
                         <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
