change margin elements

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <h3>Saint Petersburg</h3>
 
                     <img class="imgClassBig" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
-                    <p class="tempP">8°C</p>
+                    <p class="tempP">-27°C</p>
                 </div>
 
                 <div>
                     <ul class="weatherData">
-                        <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
+                        <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern sans with monreal breath</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Давление</p><p class="p2">1013 hpa</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Влажность</p><p class="p2">52%</p></div></li>
@@ -50,7 +50,7 @@
                             <img class="imgClassSmall" src="https://img.icons8.com/material/96/000000/cloud--v1.png"></img>
                             <button class="supreme">x</button>
                         </div>
-                        <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern</p></div></li>
+                        <li><div class="weatherBlock"><p class="p1">Ветер</p><p class="p2">Modern sans with monreal breath</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Облачность</p><p class="p2">Broken cloud</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Давление</p><p class="p2">1013 hpa</p></div></li>
                         <li><div class="weatherBlock"><p class="p1">Влажность</p><p class="p2">52%</p></div></li>
