--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div><button class="butDesignSmall"><img src="https://www.flaticon.com/svg/vstatic/svg/4245/4245329.svg?token=exp=1613715624~hmac=be74b8729b7931ae497d740244b0e671" alt=""></button></div>
         </header>
         <main>
-            <div class="grid">
+            <div class="grid" id="add_to_me">
                 <div>
                     <h3>Saint Petersburg</h3>
 
@@ -37,7 +37,7 @@
 
                 <div class="rghtCentringToRight">
                         <input type="text" placeholder="Добавить новый город" size="40">
-                        <button>+</button>                
+                        <button onclick="addCode()">+</button>                
                     </div>
             </div>
 
@@ -135,6 +135,9 @@
             </div>
 
         </main>
+        <script src="js/newBlock.js"></script>
+        <script scr="js/deleteBlock.js"></script>
+        <script scr="js/weather.js"></script>
     </body>
 </html>
 
