--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2 class="h1New">Избранное</h2>
                 </div>
                 <div class="rghtCentringToRight">
-                        <input type="text" id="new_city" placeholder="Добавить новый город" size="40">
+                        <input type="text" id="new_city" onkeydown="search(this)" placeholder="Добавить новый город" size="40">
                         <button onclick="addCode()">+</button>                
                     </div>
             </div>
