--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="mobile.css">
         <link rel="stylesheet" type="text/css" href="smallScreen.css">
     </head>
-    <body id="auto" onload="autoLoad()">
+    <body id="auto">
         <header class="wrapper">
             <div><h1 class="h1New">Погода здесь</h1></div>
             <div><button id="Update" class="butDesign">Обновить геолокацию</button></div>
@@ -33,7 +33,7 @@
                     <h2 class="h1New">Избранное</h2>
                 </div>
                 <div class="rghtCentringToRight">
-                        <input type="text" id="new_city" onkeydown="search(this)" placeholder="Добавить новый город" size="40">
+                        <input type="text" id="new_city" placeholder="Добавить новый город" size="40">
                         <button id="add">+</button>                
                     </div>
             </div>
